namespace GoldMetrics.GoldCheck.Platform.Shared.Resources;

public class CommonMessages
{
}
