namespace GoldMetrics.GoldCheck.Platform.Shared.Resources.Errors;

public class ErrorMessages
{
    
}
